# io_scene_blood_money

./: LICENSE  README.md  __init__.py  bmexport.py
.github/workflows/: release.yml
BMEdit/: CMakeLists.txt
BMEdit/BMEdit/GameLib/: CMakeLists.txt
BMEdit/BMEdit/GameLib/Include/GameLib/GMS/: GMSGeomEntity.h
BMEdit/BMEdit/GameLib/Source/GameLib/: Level.cpp
BMEdit/BMEdit/GameLib/Source/GameLib/GMS/: GMSGeomEntity.cpp  GMSHeader.cpp
BMExport/: CMakeLists.txt
BMExport/src/: AssetProvider.cpp  AssetProvider.h  File.hpp  FileReader.hpp  Prm.hpp  StreamReader.hpp  StreamWriter.hpp  Types.hpp  main.cpp  mati.cpp  mati.h  util.cpp
GlacierTEXEditor/: Configuration.cs  Form1.cs  GlacierTEXEditor.sln  Library.cs  Program.cs  glaciertex.csproj  packages.config
GlacierTEXEditor/Properties/: Resources.Designer.cs  Settings.Designer.cs
